WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
310848
Several operator==() operators in CheckedArithmetic.h are not marked as `const`
https://bugs.webkit.org/show_bug.cgi?id=310848
Summary
Several operator==() operators in CheckedArithmetic.h are not marked as `const`
Chris Dumez
Reported
2026-03-26 17:21:11 PDT
Several operator==() operators in CheckedArithmetic.h are not marked as `const`.
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2026-03-26 17:22:08 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/61454
EWS
Comment 2
2026-03-27 01:16:45 PDT
Committed
310059@main
(b2183f87fdc1): <
https://commits.webkit.org/310059@main
> Reviewed commits have been landed. Closing PR #61454 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2026-03-27 01:17:11 PDT
<
rdar://problem/173482897
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug