Several operator==() operators in CheckedArithmetic.h are not marked as `const` https://bugs.webkit.org/show_bug.cgi?id=310848

Reviewed by Ryosuke Niwa.

* Source/WTF/wtf/CheckedArithmetic.h:
(WTF::Checked::operator== const):
(WTF::Checked::operator==): Deleted.

Canonical link: https://commits.webkit.org/310059@main